--- a/Portfolio_Style_Guide_&_Sample_Templates/css/image-style.css
+++ b/Portfolio_Style_Guide_&_Sample_Templates/css/image-style.css
@@ -2,20 +2,7 @@
   width: 100%;
   height: 40rem;
   object-fit: cover;
-  margin-top: 3rem;
 }
-
-.overlay-banner {
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  bottom: 0%;
-  right: 0%;
-  background-color: rgba(0, 0, 0, 0.6);
-  width: 100%;
-  height: 43rem;
-}
-
 .img-body-banner {
   width: 100%;
   height: 30rem;
@@ -59,10 +46,10 @@
 }
 
 .project-screenshot{
-  width: 100%;
-  height: 85%;
+  width: 50%;
+  height: 50%;
   padding: 16px;
-  justify-content: space-evenly;
+  justify-content: right;
   object-fit: cover;
   background-color: transparent;
   border: none;
@@ -114,50 +101,5 @@
 .project-thumbnail:hover,
 .project-thumbnail:focus {
   display: inline-block;
-  background: #ffd000;
+  background: #39a773;
 }
-/* #leveldesign{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#huntsman{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#protagonist{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#chicken{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#ship{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#thumbnail{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#ship{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#thumbnail{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-} */
-/* @media only screen and (max-width: 870px) {
- .project-thumnail-content{
-   top:50%;
- }
-} */
