--- a/Portfolio_Style_Guide_&_Sample_Templates/css/main.css
+++ b/Portfolio_Style_Guide_&_Sample_Templates/css/main.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   flex-basis: 100%;
   flex-wrap: wrap;
-  background: #ffd000;
+  background: #48cf90;
 
 }
 
@@ -58,7 +58,7 @@
   text-align: left;
   font-size: 1.2rem;
   color: black;
-  background: #ffd000;
+  background: #48cf90;
 }
 
 #fineline{
@@ -77,7 +77,7 @@
   width: 100%;
   height: 100%;
   padding: 1.5em;
-  background-color: #ffd000;
+  background-color: #48cf90;
 }
 
 @media only screen and (max-width: 1200px) {
