--- a/Portfolio_Style_Guide_&_Sample_Templates/css/ui-style.css
+++ b/Portfolio_Style_Guide_&_Sample_Templates/css/ui-style.css
@@ -1,29 +1,21 @@
-.nav-main{
+ .nav-main{
     display: flex;
     flex-direction: row;
     position: fixed;
     width: 100%;
     margin: 0px;
-    background-color: #ffd000;
+    background-color: #48cf90;
     z-index: 1;
   }
-  
-  .nav-main-sample{
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    width: 100%;
-    background-color: #ffd000;
-    z-index: 1;
-  }
-  
+
   
   .nav-main-items{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
     flex-direction: row;
     flex-basis: 15%;
     color:black;
-    background-color: #ffd000;
+    background-color: #48cf90;
     padding: 1rem;
     text-decoration: none;
     text-align: center;
@@ -34,32 +26,12 @@
   }
   
   .nav-main-items:hover, .nav-main-items:focus {
-    background-color: #8f7500;
-    color: white;
-  }
-  
-  .nav-sample{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    flex-direction: row;
-    flex-basis: 15%;
-    color:black;
-    background-color: white;
-    padding: 1rem;
-    text-decoration: none;
-    text-align: center;
-    justify-content: flex-end;
-    z-index: 1;
-    transition-property: background-color;
-    transition-duration: 0.75s;
-  }
-  
-  .nav-sample:hover, .nav-sample:focus {
-    background-color: #8f7500;
+    background-color: #08331f;
     color: white;
   }
   
   .in-text-nav{
-    color:#ffd000;
+    color:#39a773;
     transition-property: color;
     transition-duration: 0.5s;
   }
@@ -95,7 +67,7 @@
   }
   
   .nav-button-text{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 15px;
     text-decoration: none;
     vertical-align: middle;
@@ -111,9 +83,14 @@
     border: none;
     transition-duration: 0.5s;
   }
+
+  .video-url{
+    border: none;
+    justify-content: center;
+  }
   
   .nav-button:hover, .nav-button:focus, .submit-reset-button:hover, .submit-reset-button:focus{
-    background-color: #8f7500;
+    background-color: #08331f;
     color: white;
   }
   #project-flower-box{
