Commit-03 - Added Real Content w/h connecting links

--- a/Portfolio_Main_Site/css/texts-style.css
+++ b/Portfolio_Main_Site/css/texts-style.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 0px;
@@ -19,7 +17,7 @@ ul{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   background-color: transparent;
   font-size: 3rem;
-  color: #ffd000;
+  color: #48cf90;
   text-align: left;
 }
 
@@ -30,7 +28,7 @@ ul{
   left: 25%;
   max-width: 40em;
   text-decoration-line: none;
-  color: #ffd000;
+  color: #48cf90;
   transform: translate(-50%, -50%);
 }
 
@@ -39,20 +37,24 @@ ul{
   display: flex;
   justify-content: center;
   background-color: transparent;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  color: #ffd000;
-  text-decoration: #ffd000;
+  margin-top: 10rem;
+  margin-bottom: 5rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: #48cf90;
+  text-decoration: #48cf90;
   text-decoration-line: none;
   font-size: 2rem;
 }
 
-.sub-header-contents{
+.image-descritption-contents{
   display: flex;
-  margin: 10px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  color: #ffd000;
-  text-decoration: none;
-  font-size: 1.5rem;
+  justify-content: center;
+  background-color: transparent;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: #48cf90;
+  text-decoration: #48cf90;
+  text-decoration-line: none;
+  font-size: 2rem;
 }
 
 .justify-body-content{
@@ -60,6 +62,18 @@ ul{
   flex-basis: 33%;
   padding-left: 2%;
   padding-right: 2%;
+  text-align: left;
+  font-size: 1.2rem;
+  color: white;
+  background: transparent;
+  letter-spacing: 2px;
+}
+
+.justify-project-body-content{
+  display: flex;
+  flex-basis: 100%;
+  padding-left: 25%;
+  padding-right: 25%;
   text-align: left;
   font-size: 1.2rem;
   color: white;
@@ -79,12 +93,23 @@ ul{
   letter-spacing: 2px;
 }
 
+.justify-centered-left-body-content{
+  display: flex;
+  flex-basis: 100%;
+  padding-left: 25%;
+  padding-right: 25%;
+  text-align: left;
+  font-size: 1.2rem;
+  color: white;
+  background: transparent;
+  letter-spacing: 2px;
+}
+
 
 .label-justify-content-inputs{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   background-color: transparent;
   font-size: 1.2rem;
-  /* padding: 5px; */
   color: white;
 }
 
@@ -103,56 +128,14 @@ ul{
 .label-justify-content input{
   display: none;
 
-
 }
-/* .element-container-col h3{
-  text-align: center;
-  font-weight: bold;
 
-
-} */
 .service-type{
-  text-align: center;
+  text-align: left;
   font-size: 2em;
   background-color: transparent;
 }
 
-.label-justify-content .checkmark{
-  display:inline-block;
-  width: 1em;
-  height: 1em;
-  background: lightgray;
-  position: absolute;
-  left:0;
-  top: 0;
-  border-radius: 3px;
-
-}
-
-.label-justify-content input:checked + .checkmark{
-  background: #8f7500;
-}
-
-.label-justify-content:hover .checkmark{
-  background: #ffd000;
-
-}
-.label-justify-content input:checked + .checkmark:after{
-  content:"";
-  position: absolute;
-  height: 4px;
-  width: 9px;
-  border-left: 2px solid white;
-  border-bottom: 2px solid white;
-  top: 45%;
-  left: 50%;
-  transform:translate(-50%,-50%) rotate(-45deg);
-
-
-}
-.checkmark{
-  margin-right: 5%;
-}
 .service-justify-content{
   flex-basis: 50%;
   padding: 2em;
@@ -160,19 +143,6 @@ ul{
   border: 10px;
   border-color: white;
   box-shadow: 0px 0px 10px black;
-}
-#payment-button{
-  text-align: center;
-  padding-right: 7%;
-}
-#payment-form{
-  max-width: 650px;
-}
-.image-description{
-
-  text-align: center;
-  font-size: 1.2rem;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .justify-footer-content{
@@ -183,4 +153,20 @@ ul{
   color: black;
   background: transparent;
   letter-spacing: 2px;
+}
+
+.intro-wrapper{
+  display: flex;
+  flex-basis: 100%;
+  height: 2rem;
+}
+
+.intro-text{
+  margin: 10rem;
+  font-size: 50px;
+}
+
+.content-container{
+  display: flex;
+  flex-basis: 40%;
 }
