--- a/Portfolio_Main_Site/css/image-style.css
+++ b/Portfolio_Main_Site/css/image-style.css
@@ -2,35 +2,13 @@
   width: 100%;
   height: 40rem;
   object-fit: cover;
-  margin-top: 3rem;
 }
-
-.overlay-banner {
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  bottom: 0%;
-  right: 0%;
-  background-color: rgba(0, 0, 0, 0.6);
-  width: 100%;
-  height: 43rem;
-}
-
 .img-body-banner {
   width: 100%;
   height: 30rem;
   box-shadow: 0px 0px 5px grey;
   object-fit: cover;
-}
-
-.contract-thumbnail {
-  display: flex;
-  flex-basis: 33.33%;
-  padding-left: 2%;
-  padding-right: 2%;
-  justify-content: space-evenly;
-  border: solid;
-  border-color: #ffd000;
+  margin-top: 10rem;
 }
 
 .contract-img-thumbnail {
@@ -60,9 +38,9 @@
 
 .project-screenshot{
   width: 100%;
-  height: 85%;
+  height: 100%;
   padding: 16px;
-  justify-content: space-evenly;
+  justify-content: right;
   object-fit: cover;
   background-color: transparent;
   border: none;
@@ -114,50 +92,16 @@
 .project-thumbnail:hover,
 .project-thumbnail:focus {
   display: inline-block;
-  background: #ffd000;
+  background: #39a773;
 }
-/* #leveldesign{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
 
+.image-container{
+  width: 25rem;
+  height: 25rem;
+  padding: 16px;
+  justify-content: right;
+  object-fit: cover;
+  background-color: transparent;
+  border: none;
+  transition-duration: 0.8s;
 }
-#huntsman{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#protagonist{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#chicken{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#ship{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#thumbnail{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#ship{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-}
-#thumbnail{
-  height: 85%;
-  box-shadow: 0px 0px 0px grey;
-
-} */
-/* @media only screen and (max-width: 870px) {
- .project-thumnail-content{
-   top:50%;
- }
-} */
