--- a/Portfolio_Main_Site/css/main.css
+++ b/Portfolio_Main_Site/css/main.css
@@ -1,6 +1,10 @@
+html{
+  scroll-behavior: smooth;
+}
+
 *{
   box-sizing: border-box;
-  background-color: rgb(39, 39, 39);
+  background-color: rgb(22, 22, 22);
 }
 
 .element-container {
@@ -17,7 +21,7 @@
   flex-direction: column;
   flex-basis: 100%;
   flex-wrap: wrap;
-  background: #ffd000;
+  background: #48cf90;
 
 }
 
@@ -58,7 +62,7 @@
   text-align: left;
   font-size: 1.2rem;
   color: black;
-  background: #ffd000;
+  background: #48cf90;
 }
 
 #fineline{
@@ -77,7 +81,7 @@
   width: 100%;
   height: 100%;
   padding: 1.5em;
-  background-color: #ffd000;
+  background-color: #48cf90;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -115,14 +119,15 @@
     height: 100%;
   }
 
-  .submit-reset-button{
+  .nav-main-items{
+    margin: 1rem;
     width: 100%;
     height: 100%;
   }
 
-  .nav-sample{
+  .submit-reset-button{
     width: 100%;
-    height: 100%;
+    height: 5rem;
   }
 
   .justify-body-content{
@@ -216,8 +221,51 @@
   textarea{
     width: 100%;
   }
+
+  #firstname{
+    max-width: 30rem;
+    height: 100%;
+  }
+
+  #lastname{
+    max-width: 30rem;
+    height: 100%;
+  }
   .project-thumbnail-content {
     top: 75%;
+  }
+
+  .intro-wrapper{
+    height: 100%;
+    width: 100%;
+  }
+
+  .intro-text{
+    text-align: left;
+    margin: 2rem;
+  }
+
+  .justify-centered-left-body-content{
+    padding-left: 10%;
+    padding-right: 10%;
+    width: 100%;
+    height: 100%;
+  }
+
+  .justify-project-body-content{
+    width: 100%;
+    height: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  .project-screenshot{
+    width: 100%;
+    height: 100%;
+  }
+
+  .header-contents{
+    margin-top: 0rem;
   }
 
 
