Commit - 04 - Change Nav Colour, and Intro text

--- a/Portfolio_Main_Site/css/texts-style.css
+++ b/Portfolio_Main_Site/css/texts-style.css
@@ -162,6 +162,8 @@ ul{
 }
 
 .intro-text{
+  font-family: 'Courier New', Courier, monospace;
+  color: #48cf90;
   margin: 10rem;
   font-size: 50px;
 }
