--- a/Portfolio_Main_Site/css/ui-style.css
+++ b/Portfolio_Main_Site/css/ui-style.css
@@ -13,7 +13,7 @@
     font-weight: bold;
     flex-direction: row;
     flex-basis: 10%;
-    color:white;
+    color:#39a773;
     background-color: transparent;
     padding: 0.3rem;
     margin: 1.2rem;
@@ -30,7 +30,7 @@
     height: 3px;
     bottom: 0;
     left: 0;
-    background-color: white;
+    background-color: #39a773;
     visibility: hidden;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
