--- a/Portfolio_Style_Guide_&_Sample_Templates/css/image-style.css
+++ b/Portfolio_Style_Guide_&_Sample_Templates/css/image-style.css
@@ -8,16 +8,7 @@
   height: 30rem;
   box-shadow: 0px 0px 5px grey;
   object-fit: cover;
-}
-
-.contract-thumbnail {
-  display: flex;
-  flex-basis: 33.33%;
-  padding-left: 2%;
-  padding-right: 2%;
-  justify-content: space-evenly;
-  border: solid;
-  border-color: #ffd000;
+  margin-top: 10rem;
 }
 
 .contract-img-thumbnail {
@@ -46,8 +37,8 @@
 }
 
 .project-screenshot{
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
   padding: 16px;
   justify-content: right;
   object-fit: cover;
@@ -78,7 +69,6 @@
   top: 23vmax;
   /* bottom: 0%; */
 
-
   margin-left: 1rem;
   margin-right: 1rem;
 
@@ -88,6 +78,17 @@
   z-index: 1;
   transition-duration: 0.5s;
   background: rgba(32, 32, 32, 0.9);
+}
+
+.thumbnail-header-content{
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: #48cf90;
+  text-decoration: #48cf90;
+  text-decoration-line: none;
+  font-size: 2rem;
 }
 
 .imageGrid:hover .project-thumbnail-content {
@@ -102,4 +103,15 @@
 .project-thumbnail:focus {
   display: inline-block;
   background: #39a773;
+}
+
+.image-container{
+  width: 25rem;
+  height: 25rem;
+  padding: 16px;
+  justify-content: right;
+  object-fit: cover;
+  background-color: transparent;
+  border: none;
+  transition-duration: 0.8s;
 }
