--- a/Portfolio_Main_Site/css/texts-style.css
+++ b/Portfolio_Main_Site/css/texts-style.css
@@ -160,17 +160,17 @@ ul{
   letter-spacing: 2px;
 }
 
-.intro-wrapper{
-  display: flex;
-  flex-basis: 100%;
-  height: 2rem;
-}
-
-.intro-text{
+.intro-text-name{
   font-family: 'Courier New', Courier, monospace;
   color: #48cf90;
-  margin: 10rem;
-  font-size: 50px;
+  font-size: 72px;
+  font-weight: 500;
+}
+
+.intro-text-role{
+  font-family: 'Courier New', Courier, monospace;
+  color: #48cf90;
+  font-size: 30px;
 }
 
 .content-container{
