--- a/Portfolio_Main_Site/css/main.css
+++ b/Portfolio_Main_Site/css/main.css
@@ -102,7 +102,7 @@ html{
 }
 
 
-@media only screen and (max-width: 620px) {
+@media only screen and (max-width: 650px) {
   .nav-main-items{
     margin: 0rem;
     padding: 2rem;
@@ -111,7 +111,7 @@ html{
   }
 }
 
-@media only screen and (max-width: 870px) {
+@media only screen and (max-width: 730px) {
 
   .element-container{
       justify-content: center;
@@ -153,14 +153,22 @@ html{
   .justify-body-content{
       flex-basis: 100%;
       width: auto;
+      line-height: 2rem; 
+      font-size: 1rem;
+      padding-left: 1%;
+      padding-right: 1%;
+      line-height: 2rem; 
+      font-size: 1rem;
   }
 
   .justify-centered-body-content{
       flex-basis: 100%;
       width: auto;
       text-align: left;
-      padding-left: 2%;
-      padding-right: 2%;
+      padding-left: 1%;
+      padding-right: 1%;
+      line-height: 2rem; 
+      font-size: 1rem;
   }
 
     .justify-centered-left-body-content{
@@ -169,8 +177,18 @@ html{
       flex-basis: 100%;
       width: auto;
       text-align: left;
-      padding-left: 2%;
-      padding-right: 2%;
+      padding-left: 1%;
+      padding-right: 1%;
+  }
+
+  .justify-project-body-content{
+    line-height: 2rem; 
+    font-size: 1rem;
+    flex-basis: 100%;
+    width: auto;
+    text-align: left;
+    padding-left: 1%;
+    padding-right: 1%;
   }
 
   .justify-left-header-content{
@@ -196,11 +214,6 @@ html{
       height: 20rem;
   }
 
-  .overlay-banner{
-    width: 100%;
-    height: 23rem;
-  }
-
   .img-body-banner{
     width: 100%;
     height: 20rem;
@@ -224,6 +237,12 @@ html{
 
   .imageGrid{
     flex-basis: 100%;
+  }
+
+  .image-body-banner{
+    flex-basis: 100%;
+    width: 100%;
+    height: 100%;
   }
 
   .justify-body-content {
@@ -290,7 +309,7 @@ html{
   }
 
   .header-contents{
-    margin-top: 0rem;
+    margin-top: 1.5rem;
   }
 
   .intro-text-name{
@@ -309,6 +328,10 @@ html{
     margin-left: 5rem;
     height: 10rem;
     width: 100%;
+  }
+
+  .justify-footer-content{
+    margin-top: 2rem;
   }
 
 }
