--- a/Portfolio_Style_Guide_&_Sample_Templates/css/main.css
+++ b/Portfolio_Style_Guide_&_Sample_Templates/css/main.css
@@ -5,6 +5,7 @@ html{
 *{
   box-sizing: border-box;
   background-color: rgb(22, 22, 22);
+  
 }
 
 .element-container {
@@ -84,13 +85,33 @@ html{
   background-color: #48cf90;
 }
 
-@media only screen and (max-width: 1200px) {
-  .inline-bottom-left-text{
-    left: 19rem;
-}
+.intro-wrapper-name{
+  display: block;
+  flex-basis: 100%;
+  margin: 10rem;
+  height: 10rem;
+  width: 100%;
 }
 
-@media only screen and (max-width: 870px) {
+.intro-wrapper-role{
+  display: block;
+  flex-basis: 100%;
+  margin-left: 10rem;
+  height: 10rem;
+  width: 100%;
+}
+
+
+@media only screen and (max-width: 650px) {
+  .nav-main-items{
+    margin: 0rem;
+    padding: 2rem;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media only screen and (max-width: 730px) {
 
   .element-container{
       justify-content: center;
@@ -119,8 +140,7 @@ html{
     height: 100%;
   }
 
-  .nav-main-items{
-    margin: 1rem;
+  .nav-main{
     width: 100%;
     height: 100%;
   }
@@ -133,14 +153,42 @@ html{
   .justify-body-content{
       flex-basis: 100%;
       width: auto;
+      line-height: 2rem; 
+      font-size: 1rem;
+      padding-left: 1%;
+      padding-right: 1%;
+      line-height: 2rem; 
+      font-size: 1rem;
   }
 
   .justify-centered-body-content{
       flex-basis: 100%;
       width: auto;
       text-align: left;
-      padding-left: 2%;
-      padding-right: 2%;
+      padding-left: 1%;
+      padding-right: 1%;
+      line-height: 2rem; 
+      font-size: 1rem;
+  }
+
+    .justify-centered-left-body-content{
+      line-height: 2rem; 
+      font-size: 1rem;
+      flex-basis: 100%;
+      width: auto;
+      text-align: left;
+      padding-left: 1%;
+      padding-right: 1%;
+  }
+
+  .justify-project-body-content{
+    line-height: 2rem; 
+    font-size: 1rem;
+    flex-basis: 100%;
+    width: auto;
+    text-align: left;
+    padding-left: 1%;
+    padding-right: 1%;
   }
 
   .justify-left-header-content{
@@ -166,11 +214,6 @@ html{
       height: 20rem;
   }
 
-  .overlay-banner{
-    width: 100%;
-    height: 23rem;
-  }
-
   .img-body-banner{
     width: 100%;
     height: 20rem;
@@ -194,6 +237,12 @@ html{
 
   .imageGrid{
     flex-basis: 100%;
+  }
+
+  .image-body-banner{
+    flex-basis: 100%;
+    width: 100%;
+    height: 100%;
   }
 
   .justify-body-content {
@@ -240,11 +289,6 @@ html{
     width: 100%;
   }
 
-  .intro-text{
-    text-align: left;
-    margin: 2rem;
-  }
-
   .justify-centered-left-body-content{
     padding-left: 10%;
     padding-right: 10%;
@@ -265,9 +309,30 @@ html{
   }
 
   .header-contents{
-    margin-top: 0rem;
+    margin-top: 1.5rem;
   }
 
+  .intro-text-name{
+    font-size: 46px;
+  }
+
+  .intro-text-role{
+    font-size: 32px;
+  }
+
+  .intro-wrapper-name{
+    margin: 5rem;
+  }
+
+  .intro-wrapper-role{
+    margin-left: 5rem;
+    height: 10rem;
+    width: 100%;
+  }
+
+  .justify-footer-content{
+    margin-top: 2rem;
+  }
 
 }
 form{
