--- a/Portfolio_Style_Guide_&_Sample_Templates/css/texts-style.css
+++ b/Portfolio_Style_Guide_&_Sample_Templates/css/texts-style.css
@@ -158,56 +158,23 @@ ul{
   color: black;
   background: transparent;
   letter-spacing: 2px;
+  margin-top: 2rem;
 }
 
-.intro-wrapper{
-  display: flex;
-  flex-basis: 100%;
-  height: 2rem;
-}
-
-.intro-text{
+.intro-text-name{
   font-family: 'Courier New', Courier, monospace;
   color: #48cf90;
-  margin: 10rem;
-  font-size: 50px;
+  font-size: 72px;
+  font-weight: 500;
+}
+
+.intro-text-role{
+  font-family: 'Courier New', Courier, monospace;
+  color: #48cf90;
+  font-size: 30px;
 }
 
 .content-container{
   display: flex;
   flex-basis: 40%;
-}
-
-.header-contents{
-  display: flex;
-  justify-content: center;
-  background-color: transparent;
-  margin-top: 10rem;
-  margin-bottom: 5rem;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: #48cf90;
-  text-decoration: #48cf90;
-  text-decoration-line: none;
-  font-size: 2rem;
-}
-
-.intro-text:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 3px;
-  bottom: 0;
-  left: 0;
-  background-color: #39a773;
-  visibility: hidden;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transition: all 0.5s ease-in-out 0s;
-  transition: all 0.5s ease-in-out 0s;
-}
-
-.intro-text:hover:before, .intro-text:focus:before {
-  visibility: visible;
-  -webkit-transform: scaleX(1);
-  transform: scaleX(1);
 }
