--- a/Portfolio_Main_Site/css/ui-style.css
+++ b/Portfolio_Main_Site/css/ui-style.css
@@ -1,135 +1,33 @@
- .nav-main{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    margin: 0px;
-    background-color: transparent;
-    z-index: 1;
-  }
+.nav-main { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; width: 100%; margin: 0px; background-color: transparent; z-index: 1; }
 
-  .nav-main-items{
-    position: relative;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    flex-direction: row;
-    flex-basis: 10%;
-    color:#39a773;
-    background-color: transparent;
-    padding: 0.3rem;
-    margin: 1.2rem;
-    text-decoration: none;
-    text-align: center;
-    justify-content: flex-end;
-    z-index: 1;
-  }
+.nav-main-items { position: relative; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-weight: bold; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -ms-flex-preferred-size: 10%; flex-basis: 10%; color: #39a773; background-color: transparent; padding: 0.3rem; margin: 1.2rem; text-decoration: none; text-align: center; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; z-index: 1; }
 
-  .nav-main-items:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    bottom: 0;
-    left: 0;
-    background-color: #39a773;
-    visibility: hidden;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-transition: all 0.5s ease-in-out 0s;
-    transition: all 0.5s ease-in-out 0s;
-  }
-  
-  .nav-main-items:hover:before, .nav-main-items:focus:before {
-    visibility: visible;
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
-  }
-  
-  .in-text-nav{
-    color:#39a773;
-    transition-property: color;
-    transition-duration: 0.5s;
-  }
-  
-  .in-text-nav:hover, .in-text-nav:focus{
-    color: white;
-  }
+.nav-main-items:before { content: ""; position: absolute; width: 100%; height: 3px; bottom: 0; left: 0; background-color: #39a773; visibility: hidden; -webkit-transform: scaleX(0); -ms-transform: scaleX(0); transform: scaleX(0); -webkit-transition: all 0.5s ease-in-out 0s; -o-transition: all 0.5s ease-in-out 0s; transition: all 0.5s ease-in-out 0s; }
 
-  .text-input{
-    border-radius: 10px;
-    height: 2rem;
-    max-width: 39rem;
-    background-color: white;
-    border: none;
-    margin-top: 2rem;
-  }
+.nav-main-items:hover:before, .nav-main-items:focus:before { visibility: visible; -webkit-transform: scaleX(1); -ms-transform: scaleX(1); transform: scaleX(1); }
 
-  input[type=text] {
-    width: 100%;
-    padding: 12px 5px;
-    margin: 10px 0px ;
-    box-sizing: border-box;
-  }
-  
-  .nav-button{
-    flex-basis: 100%;
-    border-radius: 10px;
-    width: 25em;
-    color: white;
-    background-color: black;
-    border: none;
-    box-shadow: 0px 0px 10px black;
-    transition-duration: 0.5s;
-  }
-  
-  .nav-button-text{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 15px;
-    text-decoration: none;
-    vertical-align: middle;
-    text-align: center;
-  }
-  
-  .submit-reset-button{
-    border-radius: 10px;
-    width: 10em;
-    height: 3em;
-    margin-top: 10px;
-    color: white;
-    border: none;
-    transition-duration: 0.5s;
-  }
+.in-text-nav { color: #39a773; -webkit-transition-property: color; -o-transition-property: color; transition-property: color; -webkit-transition-duration: 0.5s; -o-transition-duration: 0.5s; transition-duration: 0.5s; }
 
-  .video-url{
-    border: none;
-    justify-content: center;
-  }
-  
-  .nav-button:hover, .nav-button:focus, .submit-reset-button:hover, .submit-reset-button:focus{
-    background-color: #08331f;
-    color: white;
-  }
+.in-text-nav:hover, .in-text-nav:focus { color: white; }
 
-  #project-flower-box{
-    margin: 2em;
-  }
-  #project-bunker{
-    margin-bottom: 5rem;
-  }
+.text-input { border-radius: 10px; height: 2rem; max-width: 39rem; background-color: white; border: none; margin-top: 2rem; }
 
-  #firstname, #lastname{
-    margin-bottom: 1.2rem;
-    max-width: 10rem;
-  }
+input[type=text] { width: 100%; padding: 12px 5px; margin: 10px 0px; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-  /* #home-nav{
-    background-color: white;
-    position: absolute;
-    left: 50%;
-    margin-left: -17%;
-    height: 50%;
-    width: 33%;
-    border-radius: 50%;
-    border-style: solid;
-    border-color: #39a773;
-    z-index: 1;
-  } */
+.nav-button { -ms-flex-preferred-size: 100%; flex-basis: 100%; border-radius: 10px; width: 25em; color: white; background-color: black; border: none; -webkit-box-shadow: 0px 0px 10px black; box-shadow: 0px 0px 10px black; -webkit-transition-duration: 0.5s; -o-transition-duration: 0.5s; transition-duration: 0.5s; }
+
+.nav-button-text { font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; padding: 15px; text-decoration: none; vertical-align: middle; text-align: center; }
+
+.submit-reset-button { border-radius: 10px; width: 10em; height: 3em; margin-top: 10px; color: white; border: none; -webkit-transition-duration: 0.5s; -o-transition-duration: 0.5s; transition-duration: 0.5s; }
+
+.video-url { border: none; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+
+.nav-button:hover, .nav-button:focus, .submit-reset-button:hover, .submit-reset-button:focus { background-color: #08331f; color: white; }
+
+#project-flower-box { margin: 2em; }
+
+#project-bunker { margin-bottom: 5rem; }
+
+#firstname, #lastname { margin-bottom: 1.2rem; max-width: 10rem; }
+
+/* #home-nav{ background-color: white; position: absolute; left: 50%; margin-left: -17%; height: 50%; width: 33%; border-radius: 50%; border-style: solid; border-color: #39a773; z-index: 1; } */
